FIXED gap header

--- a/css/style.css
+++ b/css/style.css
@@ -109,11 +109,10 @@ button {
 	display: flex;
 	flex-direction: row; /* default */
 	justify-content: space-between;
-	margin: 20px;
+	margin: 25px;
 }
 .navbar-flex {
 	display: flex;
 	flex-direction: row; /* default */
-	justify-content: space-between;
-	font-size: 3em;
+	gap: 10px;
 }
